--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,15 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
-# dependencies
+# node
 node_modules/
-
-# Expo
-.expo/
-dist/
-web-build/
-expo-env.d.ts
-
-# Native
-.kotlin/
-*.orig.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-
-# Metro
-.metro-health-check*
-
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
+npm-debug.log
+yarn-debug.log
+yarn-error.log
 
 # macOS
 .DS_Store
-*.pem
 
-# local env files
-.env*.local
+# expo
+.expo/
+.expo-shared/
 
-# typescript
-*.tsbuildinfo
-
-app-example
+# environment files
+.env
